key.core/src/test/resources/de/uka/ilkd/key/java/coverage/rejected/method-reference/MethodRef.java
public class MethodRef {
    interface Fn { int apply(String s); }
    int len(String s) { return s.length(); }
    Fn f = this::len;
}
